--- a/.github/workflows/github-action-demo.yml
+++ b/.github/workflows/github-action-demo.yml
@@ -15,5 +15,5 @@ jobs:
         run:  |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install -r requirements.test.txt
+          pip install -r test_dir/requirements.test.txt
       - run: pytest
